# shatters-sdk

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
examples/: basic.cpp  chat.cpp
include/shatters/: client.hpp  constants.hpp  init.hpp  shatters.hpp  shatters_c.h  types.hpp
include/shatters/auth/: auth.hpp
include/shatters/conversation/: manager.hpp
include/shatters/crypto/: aead.hpp  hash.hpp  kdf.hpp  keys.hpp  random.hpp  secure_memory.hpp
include/shatters/deaddrop/: deaddrop.hpp
include/shatters/identity/: address.hpp  identity.hpp
include/shatters/messaging/: session.hpp  subscription.hpp
include/shatters/protocol/: framing.hpp  message.hpp
include/shatters/ratchet/: double_ratchet.hpp
include/shatters/storage/: contact_store.hpp  database.hpp  identity_store.hpp  message_store.hpp  prekey_store.hpp  session_store.hpp
include/shatters/transport/: channel_cipher.hpp  quic_transport.hpp  transport.hpp
include/shatters/x3dh/: x3dh.hpp
src/: client.cpp  init.cpp  shatters_c.cpp  types.cpp
src/auth/: auth.cpp
src/conversation/: manager.cpp
src/crypto/: aead.cpp  hash.cpp  kdf.cpp  keys.cpp  secure_memory.cpp
src/deaddrop/: deaddrop.cpp
src/identity/: address.cpp  identity.cpp
src/messaging/: session.cpp
src/protocol/: message.cpp
src/ratchet/: double_ratchet.cpp
src/storage/: contact_store.cpp  database.cpp  identity_store.cpp  message_store.cpp  prekey_store.cpp  session_store.cpp
src/transport/: channel_cipher.cpp  quic_transport.cpp
src/x3dh/: x3dh.cpp
tests/: CMakeLists.txt  smoke_test.cpp
tests/crypto/: test_aead.cpp  test_hash.cpp  test_kdf.cpp  test_keys.cpp  test_secure_memory.cpp
tests/unit/: test_channel_cipher.cpp  test_crypto.cpp  test_deaddrop.cpp  test_protocol.cpp  test_quic_transport.cpp  test_session.cpp  test_types.cpp
